@@ -1,3 +1,6 @@
+This program is licensed under the GPL version 2 (or, at your option, any later version),
+with the following added provision:
+
 The present copyright holders of this program have given permission, as a
 special exception, to link this program with the Mozilla XPCOM library,
 libxpcom and to include header files for xpcom components when those header
@@ -6,3 +9,6 @@ followed for this program in all other ways. If at a future time xpcom
 and/or used header files are dual-licensed, where one of the licenses is 
 the GNU GPL, this exception clause ceases to apply for the dual-licensed
 code, and such code must be used under the GNU GPL.
+
+This provision does NOT apply to the functions Writer::Write() and *Writer::WriteSurface() 
+in src/Writer.cpp.
