@@ -15,7 +15,7 @@ dnl You should have received a copy of the GNU General Public License along
 dnl with this program; if not, write to the Free Software Foundation, Inc.,
 dnl 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 
-AC_INIT([GNOME Web Photo],[0.0],[FIXME],[gnome-web-photo])
+AC_INIT([GNOME Web Photo],[0.1],[mailto:chpe@gnome.org],[gnome-web-photo])
 
 GNOME_COMMON_INIT
 
